--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,12 @@
   "name": "chromebox",
   "private": true,
   "version": "0.0.0",
-  "dependencies": {},
+  "dependencies": {
+    "angular": "~1.4.8",
+    "bootstrap": "~3.3.6",
+    "pdfmake": "~0.1.20",
+    "jspdf": "~1.1.135"
+  },
   "devDependencies": {
     "chai": "~3.4.2",
     "mocha": "~2.3.4"
