--- a/.jshintrc
+++ b/.jshintrc
@@ -17,6 +17,7 @@
   "undef": true,
   "unused": true,
   "strict": true,
+  "predef": ["angular", "indexedDB", "pdfMake"],
   "globals" : {
     "$": false,
     "chrome": true,
